remove the logic with workspace
